--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ lang: "en"
 title: Cara's Blog
 
 # Short bio or description (displayed in the header)
-description: This is a blog
+description: This is a blog.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /assets/image/honeyimage.jpeg
