--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 lang: "en"
 
 # Name of your site (displayed in the header)
-title: Cara's Blog
+title: Cara's DHSI Experience
 
 # Short bio or description (displayed in the header)
-description: This is a blog.
+description: ctrl + atl + poutine!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /assets/image/honeyimage.jpeg
