--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ lang: "en"
 title: Cara's DHSI Experience
 
 # Short bio or description (displayed in the header)
-description: ctrl + atl + poutine!
+description: Ctrl + Atl + Poutine!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /assets/image/honeyimage.jpeg
