--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: Cara's DHSI Experience
 description: Ctrl + Atl + Poutine!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /assets/image/honeyimage.jpeg
+avatar: /assets/image/C244142A-8CC4-4DB2-BACE-CA557AC2B6A4_1_201_a.heic
 
 #
 # Flags below are optional
